# pocillo-gtk-theme

./: .gitignore  HACKING.md  INSTALL.md  LICENSE  Makefile  README.md  apply  meson.build  meson_options.txt  package-lock.json  pocillo  render-assets.sh
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
snap/: snapcraft.yaml
src/: _theme-color.scss  _theme.scss  index-dark-slim.theme  index-dark.theme  index-light-slim.theme  index-light.theme  index-slim.theme  index.theme  meson.build
src/gnome-shell/3.18/sass/: _color-palette.scss  _common.scss
src/gnome-shell/3.24/: gnome-shell-dark-slim.css  gnome-shell-dark.css  gnome-shell-slim.css  gnome-shell.css
src/gnome-shell/3.24/sass/: _common.scss
src/gnome-shell/common/: gnome-shell-dark-slim.css  gnome-shell-dark.css  gnome-shell-light.css  gnome-shell-slim.css
src/gnome-shell/common/sass/widgets/: _ibuspopup.scss  _menu-popover.scss  _topbar.scss
src/gtk-2.0/: gtkrc  gtkrc-dark  gtkrc-light  hacks.rc  render-assets.sh
src/gtk-3.0/: 3.24  gtk-dark.scss.in  gtk.scss.in  meson.build  render-asset.sh
src/gtk-3.0/3.20/: gtk-dark-slim.css  gtk-dark.css  gtk-light-slim.css  gtk-light.css  gtk-slim.css  gtk.css
src/gtk-3.0/3.22/: gtk-dark-slim.css  gtk-dark.css  gtk-light-slim.css  gtk-light.css  gtk-slim.css  gtk.css
src/gtk-3.0/3.22/sass/: _apps.scss  _color-palette.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _tooltip.scss  _variables.scss
src/gtk-3.0/3.22/sass/apps/: _budgie.scss  _elementary.scss  _gnome.scss  _lightdm.scss  _mate.scss  _nemo.scss  _slick-greeter.scss  _third-party.scss
src/gtk-3.0/3.22/sass/widgets/: _button.scss  _checkradio.scss  _colorchooser.scss  _decoration.scss  _dialog.scss  _entry.scss  _filechooser.scss  _frame.scss  _headerbar.scss  _level.scss  _lists.scss  _menu.scss  _misc.scss  _pathbar.scss  _popover.scss  _progress.scss  _scrollbar.scss  _sidebar.scss  _switch.scss  _toolbar.scss  _treeview.scss
src/gtk-3.0/gtk-common/: recolor-assets.sh  render-asset.sh
src/gtk-3.0/sass/: _common.scss
src/gtk-3.0/sass/apps/: _budgie.scss  _index.scss  _mate.scss  _misc.scss  _nemo.scss  _slick-greeter.scss
src/gtk-4.0/: gtk-dark.scss.in  gtk.scss.in  meson.build
src/gtk-4.0/sass/: _common.scss
src/labwc/: meson.build
src/labwc/labwc-darkest/: themerc
src/labwc/labwc-papirus-frappe/: themerc
src/labwc/labwc-qogir-darkest/: themerc
src/metacity-1/: metacity-theme-2.xml
src/openbox-3/: meson.build
src/openbox-3/openbox-3/: themerc
src/openbox-3/openbox-3-light/: themerc
src/xfwm4/: recolor-assets.sh
